# DAMS

./: .gitignore  adni_2d.py  adni_3d.py  dataset_test3D.py  dataset_train2D.py  lab.ipynb  loader.py  loss.py  pyproject.toml  resnet.py  test.py  test_load_ADNI.ipynb  test_load_ADNI_dist.ipynb  test_load_image.ipynb  test_preprocess.ipynb  train.py  utils.py
Dataset/: data_list_generator_test.py  data_list_generator_train.py
Dataset/ADNI1/GE/: 2d_slice_generator_second3.py
Preprocessing/: mri_toolkit.py
