[tool.poetry]
name = "dams"
version = "0.1.0"
description = ""
authors = ["derick-amontagna <doxdank@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pathlib = "^1.0.1"
scipy = "^1.12.0"
torchinfo = "^1.8.0"
scikit-learn = "^1.4.1.post1"
configargparse = "^1.7"
loguru = "^0.7.2"
nibabel = "^5.2.1"
scikit-image = "^0.24.0"
torch = {version = "2.2.0", source = "pytorch_cuda"}
torchvision = "0.17.0"
simpleitk = "^2.3.1"
deepbet = "^1.0.2"
antspyx = "^0.4.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.3.0"}
dvc = "^3.48.4"
fastds = "^0.6.0"
ipykernel = "^6.29.3"
dagshub = "^0.3.19"
dvclive = "^3.45.0"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
